Updated media query to stop video and display background image on mobile

--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -20,6 +20,14 @@
   font-weight: 800;
   color: #28d7fe;
 }
+.viewport-header {
+  position: relative;
+  height: 100%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 @media (max-width: 767px) {
   .about_container {
