--- a/src/pages/Welcome.module.css
+++ b/src/pages/Welcome.module.css
@@ -22,6 +22,11 @@ body {
 }
 
 .video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0;
   top: 0;
 }
 
